2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg.pm (%EXPORT_TAGS, @EXPORT_OK): Remove.
	(@comp_supported, %comp_supported, %comp_ext, $comp_regex): Move
	variables ...
	* scripts/Dpkg/Compression.pm: ... here. New file.
	* scripts/dpkg-genchanges.pl: Use new module Dpkg::Compression
	instead of tag from Dpkg.
	* scripts/dpkg-source.pl: Likewise
	* scripts/Makefile.am (nobase_dist_perllib_DATA): Add
	'Dpkg/Compression.pm'.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm: Blacklist some armel specific
	symbols (__exidx_end, __exidx_start).

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* Makefile.am: Add some missing files in EXTRA_DIST. And add a
	dist-hook rule to check that all files contained in the git
	repository (except .gitignore) are included in the dist tarball.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* configure.ac: Bump version to 1.14.15~.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* configure.ac: Release 1.14.14.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* debian/control: Bump dpkg dependency to >= 1.14.13 in dpkg-dev
	as dpkg-source needs the latest Dpkg.pm.
	* debian/control: Add libio-string-perl to Build-Depends as it's
	needed for a non-regression test (200_Dpkg_Shlibs.t).
	* debian/control: Fix priority of dselect to match the priority
	set by ftpmasters.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.14~.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.13.

2007-12-27  Flavio Stanchina  <flavio@stanchina.net>

	* scripts/dpkg-divert.pl (checkrename): Do not ignore ENOENT for
	destination.

2007-12-27  Daniel Leidert  <daniel.leidert@wgdd.de>
            Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Refactor duplicate code into ...
	(checked_alternative): ... here. New function.
	(set_links): Call it.

2007-12-27  Guillem Jover  <guillem@debian.org>
