@@ -1,3 +1,8 @@
+2007-12-28  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg.pm: Add a warning to avoid adding unnecessary stuff
+	in that module.
+
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
 	* scripts/Dpkg.pm (%EXPORT_TAGS, @EXPORT_OK): Remove.
